change design style 1

--- a/app/views/Clustered.html
+++ b/app/views/Clustered.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Clustered Example</title>
-    <script src="js/d3.v3.min.js"></script>
-    <script src="js/d3.layout.cloud.js"></script>
+    <script src="../lib/d3.v3.min.js"></script>
+    <script src="../lib/d3.layout.cloud.js"></script>
     <!--<script src="../../ISM/ismApp.js"></script>-->
     <!--<script src="../d3-cloud/build/d3.layout.cloud.js"></script>-->
 </head>
@@ -25,7 +25,7 @@
 </div>
 <div id="Clustered"></div>
 <!--<script src="js/test.js"></script>-->
-<script src="js/layout.js"></script>
+<script src="../js/layout.js"></script>
 </body>
 
 </html>
