--- a/app/views/myCloud.html
+++ b/app/views/myCloud.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Word Cloud Example</title>
-    <script src="js/d3.v3.min.js"></script>
-    <script src="js/d3.layout.cloud.js"></script>
+    <script src="../lib/d3.v3.min.js"></script>
+    <script src="../lib/d3.layout.cloud.js"></script>
     <!--<script src="../../ISM/ismApp.js"></script>-->
     <!--<script src="../d3-cloud/build/d3.layout.cloud.js"></script>-->
 </head>
@@ -38,7 +38,7 @@
 </div>
 <div id="rectCloud"></div>
 
-<script src="js/test.js"></script>
+<script src="../js/test.js"></script>
 <!--<script src="js/layout.js"></script>-->
 </body>
 
