change design style 2

--- a/app/views/Brush.html
+++ b/app/views/Brush.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Uncluttered View</title>
+    <title>Brush Example</title>
     <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <link href="../lib/dc/dc.css" rel="stylesheet">
 
@@ -43,7 +43,7 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active">
+                        <li>
                             <a href="Uncluttered.html">Unclutered view</a>
                         </li>
                         <li>
@@ -51,7 +51,7 @@
                         </li>
                         <li><a href="myCloud.html">myCloud</a></li>
                         <!--<li><a href="../lib/eg/index.html">brush</a></li>-->
-                        <li><a href="Brush.html">Brush</a></li>
+                        <li class="active"><a href="Brush.html">Brush</a></li>
                     </ul>
                     <!--<form class="navbar-form navbar-left" role="search">-->
                     <!--<div class="form-group">-->
@@ -87,28 +87,14 @@
 
         <div class="col-md-12 column">
             <h3>
-                Unclustered View
+                Bursh View
             </h3>
-            <div id="Uncluttered">
-                <div class="tips pull-right"></div>
-            </div>
-            <!--<hr />-->
-            <!--<div>selected clickstream</div>-->
-
+            <div id="Brush"></div>
         </div>
-        <div class="showup"></div>
-        <div class="segment col-xs-3"></div>
-        <div class="gender col-xs-3"></div>
-        <div class="years col-xs-3"></div>
-        <div class="cartSize col-xs-3"></div>
     </div>
 </div>
-
-
-<!--<script src="js/test.js"></script>-->
+<script src="../js/brush.js"></script>
 <script src="../js/layout.js"></script>
 <script src="../js/Uncluttered.js"></script>
 <script src="../js/on.js"></script>
-<!--<script src="js/kmeans.js"></script>-->
 </body>
-</html>
