--- a/app/views/Clustered.html
+++ b/app/views/Clustered.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clustered Example</title>
+    <title>Clustered view</title>
     <script src="../lib/d3.v3.min.js"></script>
     <script src="../lib/d3.layout.cloud.js"></script>
+    <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <!--<script src="../../ISM/ismApp.js"></script>-->
     <!--<script src="../d3-cloud/build/d3.layout.cloud.js"></script>-->
 </head>
@@ -17,13 +18,64 @@
     }
 </style>
 <body>
-<div class="views">Different views:
-    <ul>
-        <li><a href="myCloud.html">myCloud</a></li>
-        <li><a href="Uncluttered.html">Uncluttered view</a></li>
-    </ul>
+<div class="container">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="../index.html">Home</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li >
+                            <a href="Uncluttered.html">Unclutered view</a>
+                        </li>
+                        <li class="active">
+                            <a href="Clustered.html">Clustered view</a>
+                        </li>
+                        <li><a href="myCloud.html">myCloud</a></li>
+                        <!--<li><a href="../lib/eg/index.html">brush</a></li>-->
+                        <li><a href="Brush.html">Brush</a></li>
+                    </ul>
+                    <!--<form class="navbar-form navbar-left" role="search">-->
+                    <!--<div class="form-group">-->
+                    <!--<input class="form-control" type="text" />-->
+                    <!--</div> <button type="submit" class="btn btn-default">Submit</button>-->
+                    <!--</form>-->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">Action</a>
+                                </li>
+                                <li>
+                                    <a href="#">Another action</a>
+                                </li>
+                                <li>
+                                    <a href="#">Something else here</a>
+                                </li>
+                                <li class="divider">
+                                </li>
+                                <li>
+                                    <a href="#">Separated link</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+
+    <div class="row clearfix">
+        <h3>Clustered view</h3>
+        <br />
+        <div id="Clustered"></div>
+        <br />
+    </div>
 </div>
-<div id="Clustered"></div>
 <!--<script src="js/test.js"></script>-->
 <script src="../js/layout.js"></script>
 </body>
