--- a/app/views/Brush.html
+++ b/app/views/Brush.html
@@ -18,10 +18,10 @@
     body {
         font-family:"Lucida Grande","Droid Sans",Arial,Helvetica,sans-serif;
     }
-    rect {
-        stroke: black;
-        stroke-width: 0.1;
-    }
+    /*rect {*/
+        /*stroke: black;*/
+        /*stroke-width: 0.1;*/
+    /*}*/
     .legend {
         border: 1px solid #555555;
         border-radius: 5px 5px 5px 5px;
@@ -91,8 +91,11 @@
             <h3>
                 Bursh View
             </h3>
-            <button type="button" class="btn btn-default" onclick="get_selection();">Get Selection</button>
-            <button type="button" class="btn btn-default" onclick="clear_selection();">Clear Selection</button>
+            <button type="button" class="btn btn-info" onclick="get_selection();">Get Selection</button>
+            <button type="button" class="btn btn-info" onclick="clear_selection();">Clear Selection</button>
+            <button type="button" class="btn btn-info pull-right" onclick=" showSelected();">Show all Selected</button>
+            <br />
+            <br />
             <div class="Brush"></div>
         </div>
     </div>
