--- a/app/views/Clustered.html
+++ b/app/views/Clustered.html
@@ -34,7 +34,7 @@
                         <li class="active">
                             <a href="Clustered.html">Clustered view</a>
                         </li>
-                        <li><a href="myCloud.html">myCloud</a></li>
+                        <!--<li><a href="myCloud.html">myCloud</a></li>-->
                         <!--<li><a href="../lib/eg/index.html">brush</a></li>-->
                         <li><a href="Brush.html">Brush</a></li>
                     </ul>
