--- a/app/views/Uncluttered.html
+++ b/app/views/Uncluttered.html
@@ -49,7 +49,7 @@
                         <li>
                             <a href="Clustered.html">Clustered view</a>
                         </li>
-                        <li><a href="myCloud.html">myCloud</a></li>
+                        <!--<li><a href="myCloud.html">myCloud</a></li>-->
                         <!--<li><a href="../lib/eg/index.html">brush</a></li>-->
                         <li><a href="Brush.html">Brush</a></li>
                     </ul>
