--- a/app/views/lineBrush.html
+++ b/app/views/lineBrush.html
@@ -8,7 +8,7 @@
     <link href="../lib/dc/dc.css" rel="stylesheet">
     <link href="../styles/line.css" rel="stylesheet">
     <link href="../styles/brush.css" rel="stylesheet">
-
+    <link href="../lib/eg/stylesheet.css" rel="stylesheet">
     <!--<link href="../lib/eg/stylesheet.css" rel="stylesheet">-->
 
     <script src="../lib/d3.v3.min.js" charset="utf-8"></script>
