seperate line and node draw

--- a/app/views/lineBrush.html
+++ b/app/views/lineBrush.html
@@ -100,11 +100,11 @@
             <div ng-controller="ngCtl">
             <!--<div id="graphic"  ng-controller="lineBrushCtrl">-->
             <form name="info">
-                <input type="number" ng-model="lineN" placeholder="line number">
+                <input type="number" ng-model="lineN" placeholder="line number" ng-change="changeLine(lineN)">
 
-                <select ng-init="selectName = names[0]" ng-model="selectName" ng-options="x for x in names"></select>
+                <select ng-init="selectName = names[0]" ng-model="selectName" ng-options="x for x in names" ng-click="select(selectName)"></select>
 
-                <input type="submit" value="Submit" ng-click="changeLine(lineN,selectName)">
+
                 <!--<input type="checkbox" ng-model="confirmed" ng-change="" /> {{comfirmed}}-->
             </form>
 
@@ -113,6 +113,7 @@
                     <!--<input type="number" ng-model="belongN" placeholder="line number">-->
                     <!--<input type="submit" value="Submit" ng-click="changeBelong(belongN)">-->
                 </div>
+                <input type="submit" value="showData" ng-click="showData()">
                 <div class="crossfilter">
                     <div class="segment col-xs-3"></div>
                     <div class="gender col-xs-3"></div>
