--- a/app/views/Uncluttered.html
+++ b/app/views/Uncluttered.html
@@ -30,6 +30,11 @@
     .bld {
         font-weight: bold;
     }
+    .extent {
+        fill: #000;
+        fill-opacity: .125;
+        stroke: #fff;
+    }
 </style>
 <body>
 
@@ -109,6 +114,6 @@
 <script src="../js/layout.js"></script>
 <script src="../js/Uncluttered.js"></script>
 <script src="../js/on.js"></script>
-<!--<script src="js/kmeans.js"></script>-->
+<script src="../js/line.js"></script>
 </body>
 </html>
