--- a/app/views/intergrated.html
+++ b/app/views/intergrated.html
@@ -93,10 +93,12 @@
 
         <div class="col-md-12 column" >
             <div class="graphic"></div>
+            <!--<div class="rect"></div>-->
         </div>
     </div>
 </div>
 
 <script src="../js/intergrated.js"></script>
+<script src="../js/rectBrush.js"></script>
 </body>
 </html>
