--- a/app/views/lineBrush.html
+++ b/app/views/lineBrush.html
@@ -129,7 +129,7 @@
 <!--<script src="../js/lineBrush.js"></script>-->
 <script src="../js/line.js"></script>
 <script type="text/javascript" src="../lib/eg/jquery.tipsy.js"></script>
-<script src="../js/layout.js"></script>
+<!--<script src="../js/layout.js"></script>-->
 <script src="../js/Uncluttered.js"></script>
-<script src="../js/on.js"></script>
+<!--<script src="../js/on.js"></script>-->
 </body>
