--- a/app/views/Uncluttered.html
+++ b/app/views/Uncluttered.html
@@ -92,18 +92,22 @@
         </div>
     </div>
     <div class="row clearfix">
-
+        <h3>
+            Unclustered View
+        </h3>
+        <div class="row">
+            <!--<div class="col-md-3 column">-->
+                <!--<div class="Bursh"></div>-->
+                <table class="table table-hover"></table>
+            <!--</div>-->
         <div class="col-md-8 column">
-            <h3>
-                Unclustered View
-            </h3>
-            <div id="Uncluttered">
-            </div>
-            <span>选中序列所属类别</span>
-            <div class="showup" style="height: 60px"></div>
-            <!--<input type="button" class="button" >-->
-            <span>所选序列统计信息</span>
+            <div id="Uncluttered"></div>
         </div>
+        </div>
+        <span>选中序列所属类别</span>
+        <div class="showup" style="height: 60px"></div>
+        <!--<input type="button" class="button" >-->
+        <span>所选序列统计信息</span>
         <div class="col-md-12 column">
         <div class="segment col-xs-3"></div>
         <div class="gender col-xs-3"></div>
@@ -118,6 +122,6 @@
 <script src="../js/layout.js"></script>
 <script src="../js/Uncluttered.js"></script>
 <script src="../js/on.js"></script>
-<script src="../js/line.js"></script>
+<!--<script src="../js/line.js"></script>-->
 </body>
 </html>
