seperate line and node draw

--- a/app/views/Uncluttered.html
+++ b/app/views/Uncluttered.html
@@ -122,6 +122,6 @@
 <script src="../js/layout.js"></script>
 <script src="../js/Uncluttered.js"></script>
 <script src="../js/on.js"></script>
-<!--<script src="../js/line.js"></script>-->
+<script src="../js/line.js"></script>
 </body>
 </html>
