--- a/app/views/intergrated.html
+++ b/app/views/intergrated.html
@@ -98,13 +98,13 @@
             子宫肌瘤临床路径研究可视化结果
         </h3>
         <div class="row">
-            <div ng-controller="plotCtrl" class="col-md-4 column">
+            <div class="col-md-4 column">
                 <h5>
                     路径分类结果概览
                 </h5>
                 <div class="Brush center"></div>
                 <h5>表格</h5>
-                <table ng-controller="tabelCtrl" class="table table-hover">
+                <table class="table table-hover">
                     <tr ng-repeat="x in dic">
                         <td>{{x.index}}</td>
                         <td>{{x.name}}</td>
