--- a/app/views/Uncluttered.html
+++ b/app/views/Uncluttered.html
@@ -108,11 +108,25 @@
         <div class="showup" style="height: 60px"></div>
         <!--<input type="button" class="button" >-->
         <span>所选序列统计信息</span>
+        <div class="cartSize col-xs-12"></div>
         <div class="col-md-12 column">
-        <div class="segment col-xs-3"></div>
-        <div class="gender col-xs-3"></div>
-        <div class="years col-xs-3"></div>
-        <div class="cartSize col-xs-3"></div>
+        <div class="segment col-xs-4"></div>
+        <div class="gender col-xs-4"></div>
+        <div class="years col-xs-4"></div>
+        </div>
+        <div class="new col-xs-12">
+            <div class="day1"></div>
+            <div class="day2"></div>
+            <div class="day3"></div>
+            <div class="day4"></div>
+            <div class="day5"></div>
+            <div class="day6"></div>
+            <div class="day7"></div>
+            <div class="day8"></div>
+            <div class="day9"></div>
+            <div class="day10"></div>
+            <div class="day11"></div>
+            <div class="day12"></div>
         </div>
     </div>
 </div>
